libreoffice (1:7.0.3-3) UNRELEASED; urgency=medium

  * debian/patches/icu-68.diff: fix build with ICU 68

  * debian/tests/uicheck-{sc,sw}: revert timeout hack for armhf since it's
    ran on arm64 workers. Add it for mips* though
  * debian/tests/junit: skip on Zero-using architectures 

 -- Rene Engelhard <rene@debian.org>  Sun, 01 Nov 2020 18:47:50 +0100

libreoffice (1:7.0.3-2) unstable; urgency=medium

  * debian/patches/liborcus-0.16.diff: backport liborcus 0.16.1 patch
    from master, too to fix 32bit builds (e.g. on buster-backports)
  * debian/patches/oox-crypto-bigendian.diff: move ...
  * debian/patches/bigendian.diff: ... here and backport more upstream commits
    from master

  * debian/rules:
    - enable pdfium on all architectures since configure in master says
      "Disable building PDFium. Results in unsecure PDF signature
      verification."
  * debian/tests/uicheck-{sc,sw}: add timeout hack from smoketest also here
    for armhf

 -- Rene Engelhard <rene@debian.org>  Sun, 01 Nov 2020 17:30:23 +0100

libreoffice (1:7.0.3-1) unstable; urgency=medium

  * LibreOffice 7.0.3 final release (identical to rc1)

  * upload to unstable

  * debian/patches/fix-non-pdfium-build.diff: backport from master; as name
    says
  * debian/rules:
    - remove obsolete SHLIBS_OVERRIDE += -Xunordf (closes: #966087)

 -- Rene Engelhard <rene@debian.org>  Thu, 29 Oct 2020 17:11:47 +0100

libreoffice (1:7.0.3~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/rules:
    - make build-depends for libfoo-x.y.pc-using packages explicitely
      libfoo (>= x.y), libfoo (<< x.y+1) to help autopkgtest to find the
      right combination...

 -- Rene Engelhard <rene@debian.org>  Thu, 22 Oct 2020 17:01:48 +0200

libreoffice (1:7.0.2-4) unstable; urgency=medium

  * upload to unstable

 -- Rene Engelhard <rene@debian.org>  Sun, 18 Oct 2020 10:33:19 +0200

libreoffice (1:7.0.2-3) experimental; urgency=medium
