@@ -18,12 +18,12 @@ Restrictions: superficial
 # the installed LO. works standalone, though, so it's patched out of the
 # smoketest. Do it here separately.
 Tests: test-extension
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Architecture: %OOO_JAVA_ARCHS%
 Depends: libreoffice-core-nogui, libreoffice-common, libreoffice-java-common, libreoffice-smoketest-data, default-jdk
 Restrictions: allow-stderr, superficial
 
 Tests: test-extension-shared
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Architecture: %OOO_JAVA_ARCHS%
 Depends: libreoffice-core-nogui, libreoffice-common, libreoffice-java-common, libreoffice-smoketest-data, default-jdk
 Restrictions: allow-stderr, needs-root, superficial
 
@@ -35,7 +35,7 @@ Depends: @builddeps@, libreoffice-core, libreoffice-impress, libreoffice-writer,
 Restrictions: allow-stderr
 
 Tests: uicheck-sc
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Architecture: %OOO_JAVA_ARCHS%
 Depends: @builddeps@, libreoffice-core, libreoffice-calc, libreoffice-draw, python3-uno, libreoffice-l10n-he, libreoffice-l10n-zh-tw, libreoffice-java-common
 Restrictions: allow-stderr
 
@@ -44,7 +44,7 @@ Depends: @builddeps@, libreoffice-core, libreoffice-draw, libreoffice-impress, p
 Restrictions: allow-stderr
 
 Tests: uicheck-sw
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Architecture: %OOO_JAVA_ARCHS%
 Depends: @builddeps@, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-base, python3-uno, libreoffice-l10n-he, libreoffice-l10n-zh-tw, libreoffice-librelogo, libreoffice-java-common
 Restrictions: allow-stderr
 
@@ -57,7 +57,7 @@ Depends: @builddeps@, libreoffice-core, libreoffice-writer, python3-uno
 Restrictions: allow-stderr
 
 Tests: junit
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Architecture: %OOO_JAVA_ARCHS%
 Depends: @builddeps@, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, libreoffice-subsequentcheckbase, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird
 Restrictions: allow-stderr, skippable
 
@@ -66,12 +66,12 @@ Depends: libreoffice-dev, libreoffice-dev-doc
 Restrictions: superficial
 
 Tests: odk-build-examples
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Architecture: %OOO_JAVA_ARCHS%
 Depends: @builddeps@, libreoffice-core-nogui, libreoffice-dev, libreoffice-dev-doc, python3-uno
 Restrictions: allow-stderr
 
 Tests: odk-build-examples-java
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Architecture: %OOO_JAVA_ARCHS%
 Depends: @builddeps@, libreoffice-core-nogui, libreoffice-dev, libreoffice-dev-doc, libreoffice-java-common, libofficebean-java
 Restrictions: allow-stderr, skippable
 
