@@ -7,6 +7,12 @@
 set -e
 set -E
 
+# skip on Zero using architectures
+if java -version 2>&1 | grep -q Zero; then
+        echo "Zero-using architecture. Skipping."
+        exit 77
+fi
+
 SRCDIR=`pwd`
 CHECK_PARALLELISM=1
 
@@ -35,7 +41,7 @@ cd $SRCDIR/odk
 
 export PARALLELISM=$CHECK_PARALLELISM
 make -rk \
-	CustomTarget_odk/build-examples verbose=t
+	CustomTarget_odk/build-examples_java verbose=t
 
 unapply
 
