@@ -2,9 +2,16 @@ libreoffice (1:7.0.3-3) UNRELEASED; urgency=medium
 
   * debian/patches/icu-68.diff: fix build with ICU 68
 
-  * debian/tests/uicheck-{sc,sw}: revert timeout hack for armhf since it's
-    ran on arm64 workers. Add it for mips* though
-  * debian/tests/junit: skip on Zero-using architectures 
+  * more autopkgtest fixes/preparations for new architectures:
+    - debian/tests/uicheck-{sc,sw}: revert timeout hack for armhf since it's
+      ran on arm64 workers. Add it for mips* though
+    - debian/tests/control: ...
+    - debian/tests/control.in: ... move here and mark Java-using tests with
+      Architecture:
+    - debian/tests/odk-build-examples*: split non-Java and Java tests and mark
+      Java test with Architecture:
+    - debian/tests/junit, odk-build-examples-java: skip it if using a Zero-using
+      architecture
 
  -- Rene Engelhard <rene@debian.org>  Sun, 01 Nov 2020 18:47:50 +0100
 
